%% Some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg
%% Since R 3.2.0, additional system Rd macros are available,
%% e.g., \CRANpkg and \doi. See the definitions in the file
%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.16.1.9000 (2018-07-10)}{

\subsection{BUG FIXES}{
  \itemize{
    \item Offsets in the epidemic components were ignored by
    \code{simulate.hhh4()} [spotted by Johannes Bracher] as well as
    in dominant eigenvalues (\dQuote{maxEV}).
  }
}

}


\section{Changes in surveillance version 1.16.1 (2018-05-28)}{

\subsection{BUG FIXES}{
  \itemize{
    \item \code{autoplot.sts()} now sets the calling environment as
    the \code{plot_env} of the result.

    \item Several \code{twinstim}-related functions finally allow for
    prehistory events (long supported by \code{twinstim()} itself):
    \code{as.epidataCS()}, \code{glm_epidataCS()},
    \code{as.epidata.epidataCS()}.

    \item The \code{summary()} for SI[R]S-type \code{"epidata"} failed
    if there were initially infectious individuals.
  }
}

\subsection{DEPRECATED AND DEFUNCT}{
  \itemize{
    \item Several ancient functions have been deprecated and may be
    removed in future versions of \pkg{surveillance}: \code{qlomax()},
    \code{readData()}, \code{toFileDisProg()}, \code{correct53to52()},
    \code{enlargeData()}, \code{compMatrix.writeTable()},
    \code{test()}, \code{testSim()}, \code{makePlot()}.
  }
}

}


\section{Changes in surveillance version 1.16.0 (2018-01-24)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item The \code{as.data.frame()} method for \code{"sts"} objects
    gained a \code{tidy} argument, which enables conversion to the
    long data format and is also available as function \code{tidy.sts()}.

    \item A \CRANpkg{ggplot2} variant of \code{stsplot_time()} is now
    available via \code{autoplot.sts()}.
    