@@ -130,8 +130,6 @@ xx/07/2012 R0 on an object containing agegrp as a factor variable
 # Features
 ##########
 
-- maybe eventually use accelerated bdist.points() with spatstat (> 1.55-1)
-
 - type-specific iso-kernels (need example or test code)
 
 - maybe re-evaluate siaf.lomax(density=FALSE), i.e., f(x) = (1+x/sigma)^-d
